# advent-of-code

./: README.md  day10_2.py  day12.py  day12_1.py  day13.py  day14.py  day16.c  day16.py  day1_1.py  day20.py  day21.py  day2_1.py  day2_2.py  day3_1.py  day3_2.py  day4_1.py  day5_1.py  day5_2.py  day7_2.py  day8_1.py  day9_1.py  mix.exs  project.clj  test.html
2015/: Cargo.toml  README.md
2015/python/: astar.py  day_19.py  day_2.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_5.py
2015/rust/days/day_19/: Cargo.toml
2015/rust/days/day_19/src/: main.rs
2016/input/: day_10.txt
2016/python/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
2017/: README.md  day11_1.py  day12.py  day15.py  day16.py  day17.c  day18_1.py  day18_2.py  day19.py  day20.py  day22.py  day23_1.py  day23_2.py  day4_2.py  day6_1.py  day7_1.py  day8_2.py  day9_2.py
2017/python/: .gitignore  day10_1.py  day10_2.py  day11_1.py  day12.py  day13.py  day14.py  day15.py  day16.c  day16.py  day17.py  day18_1.py  day18_2.py  day19.py  day1_2.py  day20.py  day21.py  day22.py  day23_1.py  day23_2.py  day2_1.py  day2_2.py  day3_1.py  day3_2.py  day4_1.py  day4_2.py  day5_1.py  day5_2.py  day6_1.py  day6_2.py  day7_1.py  day7_2.py  day8_1.py  day8_2.py  day9_1.py  day9_2.py  day_1.py  day_24.py  (+1 more)
2018/: README.md
2019/: README.md  mix.exs
2021/: Cargo.toml  README.md
(+473 files in other folders)
