[package]
name = "day_19"
version = "0.1.0"
authors = ["Jos van Bakel <jos@codeaddict.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../../lib" }
itertools = "0.10"
lazy_static = "1"
rayon = "1.5"
lru = "0.7.0"
regex = "1"